--- a/bomberman.config
+++ b/bomberman.config
@@ -109,7 +109,7 @@
     "c": 2
 }
 
-"BLOCK_MODEL": "Asset/Model/Model_Bomb/Model_Bomb.obj"
+"BLOCK_MODEL": "Asset/Model/Model_Char/Model_char.obj" # Model_Bomb/Model_Bomb.obj"
 "BLOCK_SOFT_TEXTURE": "Asset/Texture/End/SoftBlock/Obsidian.png"
 "BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/Bedrock.png"
 "BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/"
@@ -137,6 +137,7 @@
     "a": 110
     "b": 50
 }
+"CHARACTER_MODEL": "Asset/Model/Model_Char/Model_Char.obj"
 
 ## GAME
 
