Add Scene Loader (Works but the Loading Screen is not displayed)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ set(SRCS
         src/Scenes/SceneWithEvents/SceneWithEvents.cpp
         src/Scenes/SplashScreen/SplashScreenScene.cpp
         src/Scenes/PauseMenuScene/PauseMenuScene.cpp
+        src/Scenes/LoadingScreen/LoadingScreenScene.cpp
         # CONFIG
         src/ConfigFile/ConfigFile.cpp
         # EXCEPTION
