--- a/bomberman.config
+++ b/bomberman.config
@@ -127,6 +127,7 @@
 "DEF_FONT_SIZE": 40
 "DEF_SOUND_VOLUME": 1.0
 "DEF_SOUND_PITCH": 0.5
+"DEF_BACKGROUND": "./Asset/Texture/dirt_32_32.png"
 
 ### ENTITIES
 
