--- a/bomberman.config
+++ b/bomberman.config
@@ -129,6 +129,8 @@
 "DEF_SOUND_PITCH": 0.5
 "DEF_BACKGROUND": "./Asset/Texture/dirt_32_32.png"
 
+"OPTION_BACK": "Asset/Texture/dirt_32_32.png"
+
 ### ENTITIES
 
 # TIMER
