style(bomberman.config): rename variables

--- a/bomberman.config
+++ b/bomberman.config
@@ -26,15 +26,15 @@
 
 ## CORE
 
-"WIN_SIZE": {
-"a": 1280
-"b": 720
-}
-
 #"WIN_SIZE": {
-#    "a": 1920
-#    "b": 1080
+#"a": 1280
+#"b": 720
 #}
+
+"WIN_SIZE": {
+    "a": 1920
+    "b": 1080
+}
 "WIN_TITLE": "BomberBlock"
 "WIN_BACK": 22              #RColor::RBLACK
 "CAM_POSITION": {
@@ -56,7 +56,11 @@
 ## GUI
 
 "STANDARD_FONT": "Asset/Font/MinecraftRegular.ttf"
-"STANDARD_FONT_SIZE": 20
+"STANDARD_FONT_SIZE": 40
+
+"STANDARD_SOUND_VOLUME": 1.0
+"STANDARD_SOUND_PITCH": 0.5
+"STANDARD_BACKGROUND": "./Asset/Texture/dirt_32_32.png"
 
 "STANDARD_IDLE_BUTTON_TEXTURE": "Asset/Interface/Button.png"
 "STANDARD_HOVER_BUTTON_TEXTURE": "Asset/Interface/HoverButton.png"
@@ -121,13 +125,6 @@
 "BLOCK_BONUS_SPEEDUP_TEXTURE": "Asset/Texture/Mob/Cow.png" # TODO EDIT WITH BONUS TEXTURE PASS
 "BLOCK_BONUS_WALLPASS_TEXTURE": "Asset/Texture/Mob/Cow.png" # TODO EDIT WITH BONUS TEXTURE PASS
 
-## DEFAULT
-
-"DEF_FONT": "Asset/Font/MinecraftRegular.ttf"
-"DEF_FONT_SIZE": 40
-"DEF_SOUND_VOLUME": 1.0
-"DEF_SOUND_PITCH": 0.5
-"DEF_BACKGROUND": "./Asset/Texture/dirt_32_32.png"
 
 ### ENTITIES
 
