Fix missing character model in config file

--- a/bomberman.config
+++ b/bomberman.config
@@ -141,6 +141,8 @@
     "b": 50
 }
 
+"CHARACTER_MODEL": "Asset/Model/Model_Char/Model_Char.obj"
+
 ## GAME
 
 "BLAST_DURATION": 5 # time in second (negativ value will replace by 0)
