WIP: Adding change player in skin choice

--- a/bomberman.config
+++ b/bomberman.config
@@ -128,8 +128,7 @@
 "DEF_SOUND_VOLUME": 1.0
 "DEF_SOUND_PITCH": 0.5
 "DEF_BACKGROUND": "./Asset/Texture/dirt_32_32.png"
-
-"OPTION_BACK": "Asset/Texture/dirt_32_32.png"
+"DEF_SKIN_PATH": "Asset/Skin/Basic_Test.png"
 
 ### ENTITIES
 
