--- a/bomberman.config
+++ b/bomberman.config
@@ -38,14 +38,14 @@
 "WIN_TITLE": "BomberBlock"
 "WIN_BACK": 22              #RColor::RBLACK
 "CAM_POSITION": {
-    "a": 32
-    "b": 8
-    "c": 32
+    "a": 18
+    "b": 14
+    "c": 18
 }
 "CAM_TARGET": {
-    "a": 34
-    "b": 8
-    "c": 3
+    "a": 18
+    "b": 14
+    "c": 0
 }
 "CAM_UP": {
     "a": 0
@@ -128,6 +128,7 @@
 "DEF_SOUND_VOLUME": 1.0
 "DEF_SOUND_PITCH": 0.5
 "DEF_BACKGROUND": "./Asset/Texture/dirt_32_32.png"
+"DEF_COUNTDOWN": 120
 
 "OPTION_BACK": "Asset/Texture/dirt_32_32.png"
 
