feat(src/Scenes/MainMenu/MainMenuScene.cpp) add background

--- a/bomberman.config
+++ b/bomberman.config
@@ -61,6 +61,15 @@
 "STANDARD_SOUND_VOLUME": 1.0
 "STANDARD_SOUND_PITCH": 0.5
 "STANDARD_BACKGROUND": "./Asset/Texture/dirt_32_32.png"
+"HOME_BACKGROUND": "Asset/Interface/background.png"
+"HOME_BACKGROUND_SIZE": {
+    "a": 9456
+    "b": 992
+}
+"HOME_BACKGROUND_START": {
+    "a": 500
+    "b": 0
+}
 
 "STANDARD_IDLE_BUTTON_TEXTURE": "Asset/Interface/Button.png"
 "STANDARD_HOVER_BUTTON_TEXTURE": "Asset/Interface/HoverButton.png"
