feat(src/Scenes/MainMenu/MainMenuScene.cpp

--- a/bomberman.config
+++ b/bomberman.config
@@ -57,6 +57,7 @@
 
 "STANDARD_FONT": "Asset/Font/MinecraftRegular.ttf"
 "STANDARD_FONT_SIZE": 40
+"SUB_FONT_SIZE": 24
 
 "STANDARD_SOUND_VOLUME": 1.0
 "STANDARD_SOUND_PITCH": 0.5
@@ -70,6 +71,9 @@
     "a": 500
     "b": 0
 }
+
+"HOME_BOTTOM_LEFT_TXT": "Bombercraft 1.0"
+"HOME_BOTTOM_RIGHT_TXT": "Copyright Mercato IS. Do not distribute !"
 
 "STANDARD_IDLE_BUTTON_TEXTURE": "Asset/Interface/Button.png"
 "STANDARD_HOVER_BUTTON_TEXTURE": "Asset/Interface/HoverButton.png"
