--- a/bomberman.config
+++ b/bomberman.config
@@ -167,12 +167,6 @@
 
 "BOMBERCRAFT_LOGO": "Asset/Interface/TitleLogo.png"
 
-"MUSIC_FILE": [
-    "Asset/Music/FightO.ogg",
-    "Asset/Music/Menu.ogg",
-    "Asset/Music/FightO.ogg",
-]
-
 "INVENTORY_TEXTURE": [
     "Asset/Interface/PowerUpBox.png",
     "Asset/Interface/InventoryBomb.png",
@@ -180,6 +174,20 @@
     "Asset/Interface/InventoryWallPass.png",
     "Asset/Interface/InventoryBlastRadius.png",
 ]
+
+"MUSIC_FILE_LIST_PATH": [
+    "Asset/Music/FightO.ogg",
+    "Asset/Music/Menu.ogg",
+]
+
+# MUSIC_FILE_LIST_NAME : all member must be different
+
+"MUSIC_FILE_LIST_NAME": [
+    "SONG0",
+    "MENU",
+]
+
+## MUSIC_FILE_LIST_PATH && MUSIC_FILE_LIST_NAME must have the same size
 
 ## KeyBindings
 
