Fix option menu proportions & Slider sizes

--- a/bomberman.config
+++ b/bomberman.config
@@ -95,19 +95,11 @@
 
 ## Slider
 
-"SLIDER_SIZE": {
-    "a": 570
-    "b": 50
-}
 "SLIDER_BACKGROUND_COLOR": 1
-"SLIDER_SELECTOR_SIZE": {
-    "a": 18
-    "b": 50
-}
+"SLIDER_SELECTOR_SIZE": 18
 "SLIDER_SELECTOR_COLOR": 21
 "SLIDER_LABEL_COLOR": 2
 "SLIDER_LABEL_SIZE": 30
-"SLIDER_LABEL_FONT": "Asset/Font/MinecraftRegular.ttf"
 
 ## IA
 
