feat(src/Scenes/MainMenu/MainMenuScene.cpp) add splash text

--- a/bomberman.config
+++ b/bomberman.config
@@ -167,6 +167,22 @@
 
 "BOMBERCRAFT_LOGO": "Asset/Interface/TitleLogo.png"
 
+"SPLASH_MSG": [
+    "Without SFML",
+    "Segmentation fault!",
+    "100% Game Engine",
+    "Better than Unity",
+    "SIMON !!!????",
+    "+ 10 - 20 = ???",
+    "Wake up Vincent !!",
+    "if (errors) then call(Julien)",
+    "Better than Corewar en 3d?",
+    "Assets by Axas",
+    "Threads lovers",
+    "Carlos where is my money ?",
+    "Only + 321euros per years",
+]
+
 "INVENTORY_TEXTURE": [
     "Asset/Interface/PowerUpBox.png",
     "Asset/Interface/InventoryBomb.png",
