- Add Sound menu

--- a/bomberman.config
+++ b/bomberman.config
@@ -176,11 +176,11 @@
 ]
 
 "MUSIC_FILE_LIST_PATH": [
-    "Asset/Music/FightO.ogg",
+    "Asset/Music/Fight0.ogg",
     "Asset/Music/Menu.ogg",
 ]
 
-# MUSIC_FILE_LIST_NAME : all member must be different
+# MUSIC_FILE_LIST_NAME : DON'T TOUCH THAT
 
 "MUSIC_FILE_LIST_NAME": [
     "SONG0",
