feat(src/Scenes/OptionsMenuScene.cpp) add rate us options

--- a/bomberman.config
+++ b/bomberman.config
@@ -81,6 +81,7 @@
     "b": 0
 }
 
+"RATE_URL": "https://intra.epitech.eu/module/2020/B-YEP-400/REN-4-1/acti-438919/note/"
 "HOME_BOTTOM_LEFT_TXT": "Bombercraft 1.0"
 "HOME_BOTTOM_RIGHT_TXT": "Copyright Mercato IS. Do not distribute !"
 
