--- a/bomberman.config
+++ b/bomberman.config
@@ -64,6 +64,7 @@
 "STANDARD_COUNTDOWN": 120
 "STANDARD_BACKGROUND": "./Asset/Texture/dirt_32_32.png"
 "STANDARD_SKIN_PATH": "Asset/Skin/Basic_Test.png"
+"STANDARD_ICON_FILEPATH": "Asset/Interface/Tnt.png"
 
 "STANDARD_FONT": "Asset/Font/MinecraftRegular.ttf"
 "STANDARD_FONT_SIZE": 40
