chore(config): sound effects path and names

--- a/bomberman.config
+++ b/bomberman.config
@@ -200,6 +200,7 @@
     "Asset/Interface/InventoryBlastRadius.png",
 ]
 
+## Note : MUSIC_FILE_LIST_PATH && MUSIC_FILE_LIST_NAME must have the same size
 "MUSIC_FILE_LIST_PATH": [
     "Asset/Music/Fight0.ogg",
     "Asset/Music/Menu.ogg",
@@ -208,13 +209,35 @@
 "GAME_SCREENSHOT": "Asset/ScreenShot/GameShot.png"
 
 # MUSIC_FILE_LIST_NAME : DON'T TOUCH THAT
-
 "MUSIC_FILE_LIST_NAME": [
     "GAME",
     "MENU",
 ]
 
-## MUSIC_FILE_LIST_PATH && MUSIC_FILE_LIST_NAME must have the same size
+"SOUND_FILE_LIST_PATH": [
+    "Asset/Sound/ActiveBomb.ogg",
+    "Asset/Sound/BlockDestroyed.ogg",
+    "Asset/Sound/ButtonClick.ogg",
+    "Asset/Sound/Death.mp3",
+    "Asset/Sound/Explosion.ogg",
+    "Asset/Sound/FireDamageTaken.ogg",
+    "Asset/Sound/InitiateBomb.ogg",
+    "Asset/Sound/LevelUp.ogg",
+    "Asset/Sound/PlayerWalk.ogg",
+    "Asset/Sound/PowerUpTaken.ogg"
+]
+"SOUND_FILE_LIST_NAME": [
+    "ActiveBomb",
+    "BlockDestroyed",
+    "ButtonClick",
+    "Death",
+    "Explosion",
+    "FireDamageTaken",
+    "InitiateBomb",
+    "LevelUp",
+    "PlayerWalk",
+    "PowerUpTaken"
+]
 
 ## KeyBindings
 
