style(Asset/Interface/TNT.png): higher definition for game logo, on Gnome or windows, it appears in big so it needs to be beautiful

--- a/bomberman.config
+++ b/bomberman.config
@@ -64,7 +64,7 @@
 "STANDARD_COUNTDOWN": 120
 "STANDARD_BACKGROUND": "./Asset/Background/BasicBackground.png"
 "STANDARD_SKIN_PATH": "Asset/Skin/Basic_Test.png"
-"STANDARD_ICON_FILEPATH": "Asset/Interface/Tnt.png"
+"STANDARD_ICON_FILEPATH": "Asset/Interface/TNT.png"
 
 "STANDARD_FONT": "Asset/Font/MinecraftRegular.ttf"
 "STANDARD_FONT_SIZE": 40
@@ -175,6 +175,8 @@
     "Threads lovers",
     "Carlos where is my money ?",
     "Only + 321euros per years",
+    "Powered by le boucher",
+    "Sullivan don't understand these messages",
 ]
 
 "INVENTORY_TEXTURE": [
