feat(src/Scenes/CreditScene/CreditScene.cpp) add credit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,7 @@ set(SRCS
         src/Scenes/GameScene/GameScene.cpp
         src/Scenes/SoundOption/SoundOptionScene.cpp
         src/Scenes/NewGameMenuScene/NewGameMenuScene.cpp
+        src/Scenes/CreditScene/CreditScene.cpp
         # CONFIG
         src/ConfigFile/ConfigFile.cpp
         # EXCEPTION
