--- a/bomberman.config
+++ b/bomberman.config
@@ -66,8 +66,6 @@
 "STANDARD_SKIN_PATH": "Asset/Skin/Basic_Test.png"
 "STANDARD_ICON_FILEPATH": "Asset/Interface/Tnt.png"
 
-"STANDARD_FONT": "Asset/Font/MinecraftRegular.ttf"
-"STANDARD_FONT_SIZE": 40
 "SUB_FONT_SIZE": 24
 
 "STANDARD_SOUND_VOLUME": 1.0
@@ -175,6 +173,19 @@
     "Threads lovers",
     "Carlos where is my money ?",
     "Only + 321euros per years",
+]
+
+"CREDIT_SCENE": [
+    "         by Mercato IndieStudio   ",
+    "         Game Programmers:        ",
+    "           Simon Racaud           ",
+    "          Sullivan Geslot         ",
+    "         Thomas Jouanolle         ",
+    "          Arthur Jourdan          ",
+    "         Vincent Andrieu          ",
+    "        Aurelien Joncour          ",
+    "EPITECH TEK2 - Indie Studio Project",
+    "    Press esc key to quit",
 ]
 
 "INVENTORY_TEXTURE": [
