--- a/bomberman.config
+++ b/bomberman.config
@@ -190,6 +190,8 @@
     "Asset/Music/Menu.ogg",
 ]
 
+"GAME_SCREENSHOT": "Asset/ScreenShot/GameShot.png"
+
 # MUSIC_FILE_LIST_NAME : DON'T TOUCH THAT
 
 "MUSIC_FILE_LIST_NAME": [
