fix(config): synthax error

--- a/bomberman.config
+++ b/bomberman.config
@@ -224,8 +224,9 @@
     "Asset/Sound/InitiateBomb.ogg",
     "Asset/Sound/LevelUp.ogg",
     "Asset/Sound/PlayerWalk.ogg",
-    "Asset/Sound/PowerUpTaken.ogg"
+    "Asset/Sound/PowerUpTaken.ogg",
 ]
+## Don't modify
 "SOUND_FILE_LIST_NAME": [
     "ActiveBomb",
     "BlockDestroyed",
@@ -236,7 +237,7 @@
     "InitiateBomb",
     "LevelUp",
     "PlayerWalk",
-    "PowerUpTaken"
+    "PowerUpTaken",
 ]
 
 ## KeyBindings
