Add splash message

--- a/bomberman.config
+++ b/bomberman.config
@@ -165,6 +165,7 @@
     "SIMON !!!????",
     "+ 10 - 20 = ???",
     "Wake up Vincent !!",
+    "Mais laissez moi dormir zebi",
     "if (errors) then call(Julien)",
     "Better than Corewar en 3d?",
     "Assets by Axas",
