--- a/bomberman.config
+++ b/bomberman.config
@@ -174,6 +174,7 @@
     "Only + 321euros per years",
     "Powered by le boucher",
     "Sullivan don't understand these messages",
+    "Arthur je te demarre quand enfaite?",
 ]
 
 "CREDIT_SCENE": [
