--- a/bomberman.config
+++ b/bomberman.config
@@ -126,11 +126,11 @@
 }
 
 "BLOCK_MODEL": "Asset/Model/Model_Block/Model_Block.obj"
-"BLOCK_SOFT_TEXTURE": "Asset/Texture/End/SoftBlock/Obsidian.png"
 "BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/Bedrock.png"
 "BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/"
 "BLOCK_BLAST_TEXTURE": "Asset/Texture/Bomb/Fire/"
-"BLOCK_FLOOR_TEXTURE": "Asset/Texture/End/Ground/EndStone.png"
+"BLOCK_SOFT_TEXTURE": "SoftBlock/" #Path in the ressource pack
+"BLOCK_FLOOR_TEXTURE": "Ground/" #Path in the ressource pack
 "BLOCK_DEFAULT_TEXTURE": "Asset/Texture/Bomb/TntBottom.png"
 "BLOCK_BONUS_BOOMUP_TEXTURE": "Asset/Texture/Mob/Cow.png" # TODO EDIT WITH BONUS TEXTURE PASS
 "BLOCK_BONUS_FIREUP_TEXTURE": "Asset/Texture/Mob/Cow.png" # TODO EDIT WITH BONUS TEXTURE PASS
