Fix set ressource pack

--- a/bomberman.config
+++ b/bomberman.config
@@ -65,6 +65,7 @@
 "STANDARD_BACKGROUND": "./Asset/Background/BasicBackground.png"
 "STANDARD_SKIN_PATH": "Asset/Skin/Basic_Test.png"
 "STANDARD_ICON_FILEPATH": "Asset/Interface/TNT.png"
+"STANDARD_RESSOURCE_PACK": "Asset/Texture/End/"
 
 "SUB_FONT_SIZE": 24
 
