--- a/bomberman.config
+++ b/bomberman.config
@@ -40,7 +40,7 @@
 "CAM_POSITION": {
     "a": 18
     "b": 14
-    "c": 18
+    "c": 19
 }
 "CAM_TARGET": {
     "a": 18
@@ -269,3 +269,27 @@
 "PLAYER_FOUR_MOVE_RIGHT": 83
 "PLAYER_FOUR_MOVE_PAUSE": 77
 "PLAYER_FOUR_MOVE_PLACE_BOMB": 82
+
+## CHARACTER
+
+"CHARA_ANIM_DEATH": "Asset/Animation/Anim_Death_20"
+"CHARA_ANIM_WALK": "Asset/Animation/Anim_Walk_20"
+"CHARA_ANIM_SET_BOMB": "Asset/Animation/Anim_Set_Bomb_9"
+
+"CHARACTER_INIT_BOMB": 1
+"CHARACTER_INIT_SPEED": 5
+"CHARACTER_INIT_WALLPASS": 0
+"CHARACTER_INIT_BLAST_RAD": 3
+
+"CHARACTER_DEATH_DURATION": 5 # SECONDS
+"CHARACTER_SCALE": 0.4
+"CHARACTER_POS_SHIFT": {
+    "a": 3
+    "b": 3
+    "c": 0
+}
+"CHARACTER_ROTATE_SHIFT": {
+    "a": 270
+    "b": 0
+    "c": 0
+}
