Add splash message

--- a/bomberman.config
+++ b/bomberman.config
@@ -176,6 +176,7 @@
     "Powered by le boucher",
     "Sullivan don't understand these messages",
     "Arthur je te demarre quand enfaite?",
+    "raylib music lag",
 ]
 
 "CREDIT_SCENE": [
