Edit splash message

--- a/bomberman.config
+++ b/bomberman.config
@@ -176,7 +176,7 @@
     "Powered by le boucher",
     "Sullivan don't understand these messages",
     "Arthur je te demarre quand enfaite?",
-    "raylib music lag",
+    "'raylib music lag' on Google",
 ]
 
 "CREDIT_SCENE": [
