refactor(main.cpp): change macros --> EXIT_ERROR 84, CONFIG_FILE "bombercraft.config"

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -174,7 +174,7 @@
     "Carlos where is my money ?",
     "Only + 321euros per years",
     "Powered by le boucher",
-    "Sullivan don't understand these messages",
+    "Sullivan doesn't understand these messages",
     "Arthur je te demarre quand enfaite?",
     "'raylib music lag' on Google",
 ]
