- Add ai timer efresh

--- a/bomberman.config
+++ b/bomberman.config
@@ -115,6 +115,7 @@
 "IA_EXPLOSION_RANGE": 6
 "IA_INTERNAL_DEFAULT_VALUE": -1 # Must be negativ, else side effect
 "IA_BOMBE_PROB": 7 # 1/IA_BOMBE_PROB
+"AI_REFRESH_TIME": 1.0
 
 ## BLOCK
 
