Fix choice skin cam up

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -153,6 +153,11 @@
 }
 
 "CHARACTER_MODEL": "Asset/Model/Model_Char/Model_Char.obj"
+"CHARACTER_CHOICE_CAM_UP": {
+    "a": 0
+    "b": 1
+    "c": 0
+}
 
 "CHARACTER_SKINS": [
     "Asset/Skin/Simple_Steve.png",
