--- a/bombercraft.config
+++ b/bombercraft.config
@@ -56,6 +56,11 @@
     "b": 0
     "c": -1
 }
+"MENU_CAM_UP": {
+    "a": 0
+    "b": 1
+    "c": 0
+}
 
 ## GUI
 
@@ -153,11 +158,6 @@
 }
 
 "CHARACTER_MODEL": "Asset/Model/Model_Char/Model_Char.obj"
-"CHARACTER_CHOICE_CAM_UP": {
-    "a": 0
-    "b": 1
-    "c": 0
-}
 
 "CHARACTER_SKINS": [
     "Asset/Skin/Simple_Steve.png",
