Add FOV functionnality

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -70,6 +70,7 @@
 "STANDARD_SKIN_PATH": "Asset/Skin/Simple_Steve.png"
 "STANDARD_ICON_FILEPATH": "Asset/Interface/TNT.png"
 "STANDARD_RESSOURCE_PACK": "Asset/Texture/End/"
+"STANDARD_CAMERA_FOV": 90
 
 "SUB_FONT_SIZE": 24
 
