chore(config): hitbox position, hitbox shift

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -306,13 +306,15 @@
 
 "CHARACTER_DEATH_DURATION": 5 # SECONDS
 "CHARACTER_SCALE": 0.4
-"CHARACTER_POS_SHIFT": {
-    "a": 0
-    "b": 0
-    "c": 0
+
+"HITBOX_SIZE": {
+    "a": 1.2
+    "b": 2
+    "c": 1.2
 }
-"CHARACTER_ROTATE_SHIFT": {
-    "a": 0
+## Decallage de la hitbox par rapport a l'origine du modele 3d du character
+"HITBOX_SHIFT": {
+    "a": 0.3
     "b": 0
-    "c": 0
+    "c": 0.3
 }
