feat(src/Game/IABomberman/IABomberman.cpp): add setters for further setting of options in gameScene

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -127,7 +127,7 @@
 "IA_RANDOM_PROB": 58 # Probability of random choice
 "IA_EXPLOSION_RANGE": 6
 "IA_INTERNAL_DEFAULT_VALUE": -1 # Must be negativ, else side effect
-"IA_BOMBE_PROB": 7 # 1/IA_BOMBE_PROB
+"IA_BOMB_PROB": 7 # 1/IA_BOMB_PROB
 
 ## BLOCK
 
