chore(game): improve game appearance

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -137,7 +137,7 @@
 }
 
 "BLOCK_MODEL": "Asset/Model/Model_Block/Model_Block.obj"
-"BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/Bedrock.png"
+"BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/stone_slab.png"
 "BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/TNT"
 "BLOCK_BLAST_TEXTURE": "Asset/Texture/Fire/"
 "BLOCK_SOFT_TEXTURE": "SoftBlock/" #Path in the ressource pack
@@ -151,12 +151,17 @@
 ### ENTITIES
 
 # TIMER
-"TIMER_TEXTURE": "Asset/Texture/End/SoftBlock/Obsidian.png"
-"TIMER_COLOR": 7 # BLACK
+"TIMER_TEXTURE": "Asset/Texture/HardBlock/stone_andesite_smooth.png"
+"TIMER_COLOR": 22
 "TIMER_SIZE": {
     "a": 110
     "b": 50
 }
+"TIMER_TEXT_SHIFT": {
+    "a": 11
+    "b": 5
+}
+"TIMER_FONT_SIZE": 30
 
 "CHARACTER_MODEL": "Asset/Model/Model_Char/Model_Char.obj"
 
@@ -183,6 +188,8 @@
 
 "SPLASH_MSG": [
     "Without SFML",
+    "TEK4 => Communism",
+    "Chair lover",
     "Segmentation fault!",
     "100% Game Engine",
     "Better than Unity",
