--- a/bombercraft.config
+++ b/bombercraft.config
@@ -316,3 +316,10 @@
     "b": 0
     "c": 0
 }
+
+## XP
+
+"XP_BAR": [
+    "Asset/Interface/EmptyXPBar.png",
+    "Asset/Interface/FullXPBar.png",
+]
