--- a/bombercraft.config
+++ b/bombercraft.config
@@ -122,10 +122,10 @@
 
 # Comment this line for random seed
 "IA_SEED": 42 # the bigger the number is, the more random the IA is
-"IA_RANDOM_PROB": 58 # Probability of random choice
+"IA_RANDOM_PROB": 0 # Probability of random choice
 "IA_EXPLOSION_RANGE": 6
 "IA_INTERNAL_DEFAULT_VALUE": -1 # Must be negativ, else side effect
-"IA_BOMBE_PROB": 7 # 1/IA_BOMBE_PROB
+"IA_BOMB_PROB": 1 # 1/IA_BOMBE_PROB
 "AI_REFRESH_TIME": 1.0
 
 ## BLOCK
