Add new texture for blast / Remove fire model, animation and texture

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -140,7 +140,7 @@
 "BLOCK_MODEL": "Asset/Model/Model_Block/Model_Block.obj"
 "BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/stone_slab.png"
 "BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/TNT"
-"BLOCK_BLAST_TEXTURE": "Asset/Texture/Fire/"
+"BLOCK_BLAST_TEXTURE": "Asset/Texture/Blast/Lava.png"
 "BLOCK_SOFT_TEXTURE": "SoftBlock/" #Path in the ressource pack
 "BLOCK_FLOOR_TEXTURE": "Ground/" #Path in the ressource pack
 "BLOCK_DEFAULT_TEXTURE": "Asset/Texture/Bomb/TNT/TntBottom.png"
