chore(CMakeLists.txt): add Release compilation as a TODO

--- a/lib/gameEngine/CMakeLists.txt
+++ b/lib/gameEngine/CMakeLists.txt
@@ -7,6 +7,8 @@
 
 cmake_minimum_required(VERSION 3.17)
 
+#set(CMAKE_BUILD_TYPE Release) ## TODO put this before delivery
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(NAME gameEngine)
@@ -15,37 +17,37 @@ project(${NAME} VERSION 0.1 LANGUAGES CXX)
 
 ## INCLUDES
 include_directories(
-    ./include
-    ./src/
+        ./include
+        ./src/
 )
 
 ## SOURCES
 set(SRCS
-    # Scenes
-    src/SceneManager/SceneManager.cpp
-    src/AbstractScene/AbstractScene.cpp
-    # Systems
-    src/SystemManager/SystemManager.cpp
-    src/AbstractSystem/AbstractSystem.cpp
-    src/Systems/PhysicsSystem/PhysicsSystem.cpp
-    src/Systems/TimerSystem/TimerSystem.cpp
-    # Factories
-    src/EntityContainer/EntityRegister.cpp
-    src/EntityManager/EntityManager.cpp
-    # Components
-    src/Component/Component.cpp
-    src/components/Timer.cpp
-    # Other
-    src/EntityPack/EntityPack.cpp
-    # Save
-    #src/SaveManager/SaveManager.cpp
-)
+        # Scenes
+        src/SceneManager/SceneManager.cpp
+        src/AbstractScene/AbstractScene.cpp
+        # Systems
+        src/SystemManager/SystemManager.cpp
+        src/AbstractSystem/AbstractSystem.cpp
+        src/Systems/PhysicsSystem/PhysicsSystem.cpp
+        src/Systems/TimerSystem/TimerSystem.cpp
+        # Factories
+        src/EntityContainer/EntityRegister.cpp
+        src/EntityManager/EntityManager.cpp
+        # Components
+        src/Component/Component.cpp
+        src/components/Timer.cpp
+        # Other
+        src/EntityPack/EntityPack.cpp
+        # Save
+        #src/SaveManager/SaveManager.cpp
+        )
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 add_library(${NAME} ${SRCS})
 
-if(MSVC)
+if (MSVC)
     target_compile_options(${NAME} PRIVATE /W4 /WX)
-else()
+else ()
     target_compile_options(${NAME} PRIVATE -Wall -Wextra)
-endif()
+endif ()
