Add Blast Animation

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -138,9 +138,10 @@
 }
 
 "BLOCK_MODEL": "Asset/Model/Model_Block/Model_Block.obj"
+"BLOCK_BLAST_ANIM": "Asset/Animation/Anim_Blast_20"
 "BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/stone_slab.png"
 "BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/TNT"
-"BLOCK_BLAST_TEXTURE": "Asset/Texture/Blast/Lava.png"
+"BLOCK_BLAST_TEXTURE": "Asset/Texture/Blast"
 "BLOCK_SOFT_TEXTURE": "SoftBlock/" #Path in the ressource pack
 "BLOCK_FLOOR_TEXTURE": "Ground/" #Path in the ressource pack
 "BLOCK_DEFAULT_TEXTURE": "Asset/Texture/Bomb/TNT/TntBottom.png"
