fix(src/GameFactories/Block/BlockFactory.cpp) debug blast (invisible block, blast cover hard block)

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -208,6 +208,7 @@
     "Sullivan doesn't understand these messages",
     "Arthur je te demarre quand enfaite?",
     "'raylib music lag' on Google",
+    "Press F for SARL Louvel",
 ]
 
 "CREDIT_SCENE": [
