--- a/bombercraft.config
+++ b/bombercraft.config
@@ -137,6 +137,8 @@
 }
 
 "BLOCK_MODEL": "Asset/Model/Model_Block/Model_Block.obj"
+"BOMB_ANIM": "Asset/Animation/Anim_Bomb_37"
+"BOMB_ANIM_TEXTURE": "Asset/Texture/Bomb/"
 "BLOCK_BLAST_ANIM": "Asset/Animation/Anim_Blast_20"
 "BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/stone_slab.png"
 "BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/TNT"
