feat(src/Utilities/Clock.cpp src/Game/Core/Core.cpp): add clock to handle the number of calculations per seconds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,7 +102,7 @@ set(SRCS
         src/Exceptions/Exceptions.cpp
         # UTILITIES
         src/Utilities/utilities.cpp
-        src/Utilities/ProportionUtilities.hpp
+        src/Utilities/Clock.cpp
         )
 
 add_executable(${NAME} ${SRCS})
