--- a/bombercraft.config
+++ b/bombercraft.config
@@ -54,6 +54,8 @@
 "WIN_TITLE": "BomberCraft"
 "WIN_BACK": 22              #RColor::RBLACK
 
+"CPS": 60
+
 # a (horizontal)
 # b (hauteur)
 # c (vertical)
