--- a/bombercraft.config
+++ b/bombercraft.config
@@ -146,7 +146,7 @@
 "IA_EXPLOSION_RANGE": 6
 "IA_INTERNAL_DEFAULT_VALUE": -1 # Must be negativ, else side effect
 "IA_BOMB_PROB": 1 # 1/IA_BOMBE_PROB
-"AI_REFRESH_TIME": 0.3
+"AI_REFRESH_TIME": 1.0
 
 ## BLOCK
 
@@ -361,3 +361,9 @@
     "Asset/Interface/EmptyXPBar.png",
     "Asset/Interface/FullXPBar.png",
 ]
+
+"AI_SHIFT": {
+    "a": 0
+    "b": 0
+    "c": 0
+}
