fix(src/Scenes/GameScene/GameScene.cpp): don't use unistd, for Windows portability

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -2,7 +2,8 @@
 ## BOMBERMAN
 ##
 
-"SKIP_LOADING": 1 # TRUE
+"SKIP_LOADING": 1 # BOOLEAN
+"SKIP_CAMERA_ANIMATION": 0 # BOOLEAN
 
 ## MAP
 
@@ -44,15 +45,15 @@
 
 ## CORE
 
-"WIN_SIZE": {
-"a": 1280
-"b": 720
-}
-
 #"WIN_SIZE": {
-#    "a": 1920
-#    "b": 1080
+#"a": 1280
+#"b": 720
 #}
+
+"WIN_SIZE": {
+    "a": 2560
+    "b": 1080
+}
 "WIN_TITLE": "BomberCraft"
 "WIN_BACK": 22              #RColor::RBLACK
 
@@ -302,8 +303,6 @@
     "PlayerWalk",
     "PowerUpTaken",
 ]
-
-"CAMERA_ANIMATION": 1
 
 ## KeyBindings
 
