Add global seed / Remove specific seed / Add choice of seed

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -140,8 +140,6 @@
 
 ## IA
 
-# Comment this line for random seed
-"IA_SEED": 42 # the bigger the number is, the more random the IA is
 "IA_RANDOM_PROB": 0 # Probability of random choice
 "IA_EXPLOSION_RANGE": 6
 "IA_INTERNAL_DEFAULT_VALUE": -1 # Must be negativ, else side effect
@@ -266,8 +264,7 @@
 
 "NB_PLAYERS": 4
 
-# Comment this line for random seed
-#"MAP_SEED": 42
+"SEED": 42
 
 ## SOUND
 
