Add Music & Effects volume

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -89,7 +89,8 @@
 
 "STANDARD_FONT": "Asset/Font/MinecraftRegular.ttf"
 "STANDARD_FONT_SIZE": 40
-"STANDARD_SOUND_VOLUME": 1.0
+"STANDARD_SOUND_VOLUME_EFFECTS": 0.3
+"STANDARD_SOUND_VOLUME_MUSIC": 1.0
 "STANDARD_SOUND_PITCH": 0.5
 "STANDARD_COUNTDOWN": 120 # seconds
 "STANDARD_BACKGROUND": "./Asset/Background/BasicBackground.png"
