--- a/bombercraft.config
+++ b/bombercraft.config
@@ -252,6 +252,18 @@
 ## Note : MUSIC_FILE_LIST_PATH && MUSIC_FILE_LIST_NAME must have the same size
 "MUSIC_FILE_LIST_PATH": [
     "Asset/Music/Fight0.ogg",
+    "Asset/Music/Fight1.ogg",
+    "Asset/Music/Fight2.ogg",
+    "Asset/Music/Fight3.ogg",
+    "Asset/Music/Fight4.ogg",
+    "Asset/Music/Fight5.ogg",
+    "Asset/Music/Fight6.ogg",
+    "Asset/Music/Fight7.ogg",
+    "Asset/Music/Fight8.ogg",
+    "Asset/Music/Fight9.ogg",
+    "Asset/Music/Fight10.ogg",
+    "Asset/Music/Fight11.ogg",
+    "Asset/Music/Fight12.ogg",
     "Asset/Music/Menu.ogg",
 ]
 
@@ -267,7 +279,19 @@
 
 # MUSIC_FILE_LIST_NAME : DON'T TOUCH THAT
 "MUSIC_FILE_LIST_NAME": [
-    "GAME",
+    "GAME0",
+    "GAME1",
+    "GAME2",
+    "GAME3",
+    "GAME4",
+    "GAME5",
+    "GAME6",
+    "GAME7",
+    "GAME8",
+    "GAME9",
+    "GAME10",
+    "GAME11",
+    "GAME12",
     "MENU",
 ]
 
