--- a/bombercraft.config
+++ b/bombercraft.config
@@ -2,6 +2,7 @@
 ## BOMBERMAN
 ##
 
+"AI_VELOCITY_MODE": 0 # AI_VELOCITY_MODE == 1 movement with velocity else block move
 "SKIP_LOADING": 1 # BOOLEAN
 "SKIP_CAMERA_ANIMATION": 0 # BOOLEAN
 
