--- a/bombercraft.config
+++ b/bombercraft.config
@@ -45,15 +45,15 @@
 
 ## CORE
 
-#"WIN_SIZE": {
-#"a": 1280
-#"b": 720
-#}
-
 "WIN_SIZE": {
-    "a": 2560
-    "b": 1080
+"a": 1280
+"b": 720
 }
+
+#"WIN_SIZE": {
+#    "a": 2560
+#    "b": 1080
+#}
 "WIN_TITLE": "BomberCraft"
 "WIN_BACK": 22              #RColor::RBLACK
 
@@ -82,6 +82,8 @@
     "b": 1
     "c": 0
 }
+
+"PANORAMA_SPEED": 0.8
 
 ## GUI
 
