Add splash message

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -234,6 +234,7 @@
     "Arthur je te demarre quand enfaite?",
     "'raylib music lag' on Google",
     "Press F for SARL Louvel",
+    "'pet flamme' on Youtube",
 ]
 
 "CREDIT_SCENE": [
