chore(config): menu messages

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -214,8 +214,7 @@
 
 "SPLASH_MSG": [
     "Without SFML",
-    "TEK4 => Communism",
-    "Chair lover",
+    "TEK4 : Think about Communism",
     "Segmentation fault!",
     "100% Game Engine",
     "Better than Unity",
@@ -225,11 +224,12 @@
     "Mais laissez moi dormir zebi",
     "if (errors) then call(Julien)",
     "Better than Corewar en 3d?",
+    "Better than 'Corewar en 3d?' !!!",
     "Assets by Axas",
     "Thread lovers",
     "Carlos where is my money ?",
     "Only + 321euros per years",
-    "Powered by le boucher",
+    "Powered by le boucher ;_;",
     "Sullivan doesn't understand these messages",
     "Arthur je te demarre quand enfaite?",
     "'raylib music lag' on Google",
