Fix the death animation of the character

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -206,6 +206,8 @@
 
 "CHARACTER_MODEL": "Asset/Model/Model_Char/Model_Char.obj"
 
+# CHARACTER_SKINS and CHARACTER_DEATH_ANIM_TEXTURES should be of same size
+
 "CHARACTER_SKINS": [
     "Asset/Skin/Simple_Steve.png",
     "Asset/Skin/Bloody_White.png",
@@ -217,6 +219,19 @@
     "Asset/Skin/Pure_Green.png",
     "Asset/Skin/Rebel_Black.png",
     "Asset/Skin/Revenge_Red.png",
+]
+
+"CHARACTER_DEATH_ANIM_TEXTURES": [
+    "Asset/Texture/Death/Simple_Steve_Death",
+    "Asset/Texture/Death/Bloody_White_Death",
+    "Asset/Texture/Death/Deep_Blue_Death",
+    "Asset/Texture/Death/Cyber_White_Death",
+    "Asset/Texture/Death/Happy_White_Death",
+    "Asset/Texture/Death/Lava_Orange_Death",
+    "Asset/Texture/Death/Prince_Gold_Death",
+    "Asset/Texture/Death/Pure_Green_Death",
+    "Asset/Texture/Death/Rebel_Black_Death",
+    "Asset/Texture/Death/Revenge_Red_Death",
 ]
 
 ## GAME
