--- a/bombercraft.config
+++ b/bombercraft.config
@@ -184,10 +184,10 @@
 "BLOCK_SOFT_TEXTURE": "SoftBlock/" #Path in the ressource pack
 "BLOCK_FLOOR_TEXTURE": "Ground/" #Path in the ressource pack
 "BLOCK_DEFAULT_TEXTURE": "Asset/Texture/Bomb/TNT/TntBottom.png"
-"BLOCK_BONUS_BOOMUP_TEXTURE": "Asset/Texture/PowerUp/BlockBomb.png" # TODO EDIT WITH BONUS TEXTURE PASS
-"BLOCK_BONUS_FIREUP_TEXTURE": "Asset/Texture/PowerUp/BlockBlastRadius.png" # TODO EDIT WITH BONUS TEXTURE PASS
-"BLOCK_BONUS_SPEEDUP_TEXTURE": "Asset/Texture/PowerUp/BlockSpeed.png" # TODO EDIT WITH BONUS TEXTURE PASS
-"BLOCK_BONUS_WALLPASS_TEXTURE": "Asset/Texture/PowerUp/BlockWallPass.png" # TODO EDIT WITH BONUS TEXTURE PASS
+"BLOCK_BONUS_BOOMUP_TEXTURE": "Asset/Texture/PowerUp/BlockBomb.png"
+"BLOCK_BONUS_FIREUP_TEXTURE": "Asset/Texture/PowerUp/BlockBlastRadius.png"
+"BLOCK_BONUS_SPEEDUP_TEXTURE": "Asset/Texture/PowerUp/BlockSpeed.png"
+"BLOCK_BONUS_WALLPASS_TEXTURE": "Asset/Texture/PowerUp/BlockWallPass.png"
 
 ### ENTITIES
 
