refactor(core): new musics.

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -2,7 +2,7 @@
 ## BOMBERMAN
 ##
 
-"SKIP_LOADING": 1 # BOOLEAN
+"SKIP_LOADING": 0 # BOOLEAN
 "SKIP_CAMERA_ANIMATION": 0 # BOOLEAN
 
 ## MAP
@@ -291,24 +291,6 @@
     "Asset/Interface/InventoryBlastRadius.png",
 ]
 
-## Note : MUSIC_FILE_LIST_PATH && MUSIC_FILE_LIST_NAME must have the same size
-"MUSIC_FILE_LIST_PATH": [
-    "Asset/Music/Fight0.ogg",
-    "Asset/Music/Fight1.ogg",
-    "Asset/Music/Fight2.ogg",
-    "Asset/Music/Fight3.ogg",
-    "Asset/Music/Fight4.ogg",
-    "Asset/Music/Fight5.ogg",
-    "Asset/Music/Fight6.ogg",
-    "Asset/Music/Fight7.ogg",
-    "Asset/Music/Fight8.ogg",
-    "Asset/Music/Fight9.ogg",
-    "Asset/Music/Fight10.ogg",
-    "Asset/Music/Fight11.ogg",
-    "Asset/Music/Fight12.ogg",
-    "Asset/Music/Menu.ogg",
-]
-
 "GAME_SCREENSHOT": "Asset/ScreenShot/GameShot.png"
 
 ## GAME VARIABLES
@@ -321,20 +303,14 @@
 
 # MUSIC_FILE_LIST_NAME : DON'T TOUCH THAT
 "MUSIC_FILE_LIST_NAME": [
-    "GAME0",
-    "GAME1",
-    "GAME2",
-    "GAME3",
-    "GAME4",
-    "GAME5",
-    "GAME6",
-    "GAME7",
-    "GAME8",
-    "GAME9",
-    "GAME10",
-    "GAME11",
-    "GAME12",
+    "GAME",
     "MENU",
+]
+
+## Note : MUSIC_FILE_LIST_PATH && MUSIC_FILE_LIST_NAME must have the same size
+"MUSIC_FILE_LIST_PATH": [
+    "Asset/Music/Theme-Song.mp3",
+    "Asset/Music/Menu-Theme.mp3",
 ]
 
 "SOUND_FILE_LIST_PATH": [
