refactor(src/Scenes/GameScene/GameScene.cpp): put methods into different files and clean code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,8 @@ set(SRCS
         src/Scenes/PauseMenuScene/PauseMenuScene.cpp
         src/Scenes/LoadingScreen/LoadingScreenScene.cpp
         src/Scenes/GameScene/GameScene.cpp
+        src/Scenes/GameScene/SaveGameScene.cpp
+        src/Scenes/GameScene/LoadGameScene.cpp
         src/Scenes/SoundOption/SoundOptionScene.cpp
         src/Scenes/NewGameMenuScene/NewGameMenuScene.cpp
         src/Scenes/EndGame/EndGameScene.cpp
