--- a/bombercraft.config
+++ b/bombercraft.config
@@ -194,9 +194,9 @@
 # TIMER
 "TIMER_TEXTURE": "Asset/Texture/HardBlock/stone_andesite_smooth.png"
 "TIMER_COLOR": 22
-"TIMER_SIZE": {
-    "a": 110
-    "b": 50
+"TIMER_PROPORTION": {
+    "a": 8.6
+    "b": 6.9
 }
 "TIMER_TEXT_SHIFT": {
     "a": 11
