--- a/bombercraft.config
+++ b/bombercraft.config
@@ -67,8 +67,8 @@
 #}
 
 "WIN_SIZE": {
-    "a": 1920
-    "b": 1080
+    "a": 1300
+    "b": 800
 }
 "WIN_TITLE": "BomberCraft"
 "WIN_BACK": 22              #RColor::RBLACK
@@ -108,13 +108,13 @@
 "STANDARD_FONT": "Asset/Font/MinecraftRegular.ttf"
 "STANDARD_FONT_SIZE": 40
 "STANDARD_SOUND_VOLUME_EFFECTS": 0.3
-"STANDARD_SOUND_VOLUME_MUSIC": 1.0
+"STANDARD_SOUND_VOLUME_MUSIC": 0.0
 "STANDARD_SOUND_PITCH": 0.5
 "STANDARD_COUNTDOWN": 300 # seconds
 "STANDARD_BACKGROUND": "./Asset/Background/BasicBackground.png"
 "STANDARD_SKIN_PATH": "Asset/Skin/Simple_Steve.png"
 "STANDARD_ICON_FILEPATH": "Asset/Interface/TNT.png"
-"STANDARD_RESSOURCE_PACK": "Asset/Texture/End/"
+"STANDARD_RESSOURCE_PACK": "Asset/Texture/SnowyToundra/"
 "STANDARD_CAMERA_FOV": 90.0
 
 "SUB_FONT_SIZE": 24
