chore(config): improve main menu messages

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -248,8 +248,9 @@
 "BOMBERCRAFT_LOGO": "Asset/Interface/TitleLogo.png"
 
 "SPLASH_MSG": [
+    "The new unreal engine",
+    "AAA",
     "Without SFML",
-    "TEK4 : Think about Communism",
     "Segmentation fault!",
     "100% Game Engine",
     "Better than Unity",
