Edit splash message

--- a/bombercraft.config
+++ b/bombercraft.config
@@ -269,7 +269,7 @@
     "'raylib music lag' on Google",
     "Press F for SARL Louvel",
     "'pet flamme' on Youtube",
-    "Vincent aka CommitMaster",
+    "Vincent aka GitMaster",
     "+1000 commits",
 ]
 
